<resources>
    <string name="app_name">CodeRadar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login">Login</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Confirmpass">Confirm Password</string>
    <string name="alreadyanaccount">Already have an account?</string>
    <string name="OR">OR</string>
    <string name="loginWith">Login With</string>
    <string name="RegisterNow">Register now</string>
    <string name="donthaveaccount">Don\'t have an account</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="title_activity_splash_and_onboard">SplashAndOnboard</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="onboard_text">OnBoard Text</string>
    <string name="facebook_app_id">575237350372096</string>
    <string name="fb_login_protocol_scheme">fb575237350372096</string>
    <string name="email_verification_text">We have sent a verification email to your register email id. Please verify your email and then login.</string>
    <string name="hello_contest_fragment">Hello Contest fragment</string>
    <string name="firstonboardtext">DONT MISS THOSE CONTESTS ANYMORE !</string>
    <string name="secondonboardtext2">COMPETITIVE CODING CALANDER ,KNOW ABOUT UPCOMING CONTESTS</string>
    <string name="thirdonboardtext">SET A REMINDER TO NEVER MISS A CONTEST AGAIN</string>
    <string name="hello_saved_fragment">Hello saved fragment</string>
    <string name="hello_info_fragment">Hello info fragment</string>
    <string name="tester">Tester</string>
    <string name="developer">Developer</string>
    <string name="contribute_message">Dear Users, Let\'s work in this app together.</string>
    <string name="contribute_text">I want to Contribute.</string>
</resources>