<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.coderadar.ui.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registerConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/backConstraintlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:fontFamily="@font/segoeui"
                android:text="@string/welcome_to"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/xxxhd_logo"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.142" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="540dp"
                android:layout_gravity="bottom"
                android:background="@drawable/signinupback"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="303dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="44dp"
                    android:alpha="63"
                    android:background="@drawable/edittextback"
                    android:hint="@string/Name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="25dp"
                    android:textColor="@color/hintcolor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registerEmailError"
                    android:layout_width="303dp"
                    android:layout_height="76dp"
                    android:layout_marginTop="28dp"
                    app:hintEnabled="false"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText"
                    >

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="303dp"
                        android:layout_height="48dp"
                        android:alpha="63"
                        android:paddingTop="1.5dp"
                        android:background="@drawable/edittextback"
                        android:hint="@string/Email"
                        android:inputType="textEmailAddress"
                        android:paddingStart="25dp"
                        android:textColor="@color/hintcolor"
                        tools:ignore="RtlSymmetry" />

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passError"
                    android:layout_width="303dp"
                    android:layout_height="76dp"
                    app:hintEnabled="false"

                    app:passwordToggleEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/registerEmailError"
                    >

                    <EditText
                        android:id="@+id/editText3"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:alpha="63"
                        android:paddingTop="1.5dp"
                        android:background="@drawable/edittextback"
                        android:hint="@string/Password"
                        android:inputType="textPassword"
                        android:paddingStart="25dp"
                        android:textColor="@color/hintcolor" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirmPassError"
                    android:layout_width="303dp"
                    android:layout_height="76dp"
                    app:hintEnabled="false"

                    app:passwordToggleEnabled="true"
                    android:textColor="@color/hintcolor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passError"
                    >


                    <EditText
                        android:id="@+id/editText4"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:alpha="63"
                        android:paddingTop="1.5dp"
                        android:background="@drawable/edittextback"
                        android:hint="@string/Confirmpass"
                        android:inputType="textPassword"
                        android:paddingStart="25dp" />

                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:id="@+id/SignUp"
                    android:layout_width="303dp"
                    android:layout_height="45dp"
                    android:background="@drawable/buttonback"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/confirmPassError">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Sign_Up"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="303dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="28dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/SignUp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoeui"
                        android:text="@string/alreadyanaccount"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/registertologinbutton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoeui"
                        android:text="@string/Login"

                        android:textAlignment="center"
                        android:textColor="@color/registerlogincolor"
                        android:textSize="15sp"
                        android:textStyle="bold|italic" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>