<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.coderadar.ui.LoginFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainConstrainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:fontFamily="@font/segoeui"
            android:text="@string/welcome_to"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/xxxhd_logo"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.142"
            android:contentDescription="@string/app_name" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="540dp"
            android:layout_gravity="bottom"
            android:background="@drawable/signinupback"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailError"
                android:layout_width="303dp"
                android:layout_height="78dp"
                android:layout_marginTop="38dp"
                android:background="@color/white"
                android:alpha="63"
                app:hintEnabled="false"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingTop="1.5dp"
                    android:background="@drawable/edittextback"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="25dp"
                    android:textColor="@color/hintcolor"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editText2Layout"
                android:layout_width="303dp"
                android:layout_height="58dp"
                android:alpha="63"
                app:passwordToggleEnabled="true"
                android:background="@color/white"
                app:hintEnabled="false"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailError"
                >

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingTop="1.5dp"
                    android:inputType="textPassword"
                    android:hint="@string/Password"
                    android:background="@drawable/edittextback"
                    android:paddingStart="25dp"
                    android:textColor="@color/hintcolor" />

            </com.google.android.material.textfield.TextInputLayout>




            <LinearLayout
                android:id="@+id/Login"
                android:layout_width="303dp"
                android:layout_height="45dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/buttonback"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText2Layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Login"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="45dp"

                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Login">

                <View
                    android:id="@+id/view2"
                    android:layout_width="154dp"
                    android:layout_height="0.2dp"
                    android:layout_marginStart="15dp"
                    android:background="#0E0E0E"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:text="@string/OR"
                    android:textSize="15sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/view"
                    app:layout_constraintStart_toEndOf="@+id/view2"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view"
                    android:layout_width="154dp"
                    android:layout_height="0.2dp"
                    android:layout_marginEnd="15dp"
                    android:background="#0E0E0E"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/googleFacebookLayout"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/segoeui"
                    android:textAlignment="center"
                    android:text="@string/loginWith"
                    android:textStyle="bold|italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="20dp"
                    android:gravity="center"
                    >

                    <RelativeLayout
                        android:id="@+id/loginWithGoogle"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:gravity="center"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/google_facebook_button"
                        >

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/google_logo"
                            />

                    </RelativeLayout>

                </LinearLayout>



            </LinearLayout>

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="#0E0E0E"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/googleFacebookLayout" />

            <LinearLayout
                android:layout_width="303dp"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:textAlignment="center"
                    android:text="@string/donthaveaccount"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/logintoregisterbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:textAlignment="center"
                    android:text="@string/RegisterNow"
                    android:textColor="@color/registerlogincolor"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>